--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -86,7 +86,7 @@
             <div>
               <a
                 href="../../portfolio/industrial.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 sm:mr-4 uppercase"
               >
                 pl
               </a>
@@ -128,7 +128,7 @@
 
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
-        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase">
+        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-40">
           Project of an industrial hall
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
@@ -164,11 +164,11 @@
             </p>
           </div>
 
-          <div class="pb-4">
+          <div class="py-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
-              Land development plan wycentrować ryzunek z innymi
+              Land development plan
             </h2>
             <img
               loading="lazy"
@@ -176,16 +176,16 @@
               src="../../assets/industrial/PZT.jpg"
             />
           </div>
-          <div class="py-4">
+          <div class="pb-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
               Floor plan
             </h2>
             dodać zestawienie powierzchni przyklejone do końca rzutów
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
               >
                 Level 0
               </h3>
@@ -197,7 +197,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
               >
                 Level +1
               </h3>
@@ -209,7 +209,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
               >
                 Level +2
               </h3>
@@ -222,7 +222,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Sections
             </h2>
@@ -239,12 +239,12 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Details
             </h2>
             <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
             >
             Connecting the roof with the wall / attaching the sandwich panel to the column / installing doors in the sandwich panel
             </h3>
@@ -257,7 +257,7 @@
         </div>
         <div class="pb-4">
           <h2
-            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
           >
             Visualisations
           </h2>
@@ -277,6 +277,9 @@
             src="../../assets/industrial/projekt wnętrza stołówki.jpg"
           />
         </div>
+        <p class="py-2">
+          tekst
+        </p>
       </div>
     </section>
 
@@ -284,8 +287,8 @@
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/email.svg"
@@ -293,7 +296,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/linkedin.svg"
@@ -301,7 +304,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/location.svg"
