--- a/en/portfolio/kindergarten.html
+++ b/en/portfolio/kindergarten.html
@@ -86,7 +86,7 @@
             <div>
               <a
                 href="../../portfolio/kindergarten.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 sm:mr-4 uppercase"
               >
                 pl
               </a>
