--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </section>
 
     <!-- about -->
-    <section id="about" class="pt-6 md:pt-20">
+    <section id="about" class="pt-16 md:pt-20">
       <div class="lg:flex-row flex flex-col-reverse lg:items-end container m-auto lg:px-20 xl:px-36">
         <div class="text-center lg:text-left lg:mr-14">
-          <h1 class="text-4xl font-semibold mb-6 md:mb-12">Zuzanna Kuszyk</h1>
-          <p>
+          <h1 class="text-4xl font-semibold mt-2 mb-6 md:mt-0 md:mb-12">Zuzanna Kuszyk</h1>
+          <p class="px-6 text-justify lg:px-0">
             Jestem ambitną studentką architektury w trakcie studiów
             magisterskich na Politechnice Poznańskiej. Ukończyłam studia
             pierwszego stopnia z oceną bardzo dobrą i otrzymałam stypendium
@@ -409,8 +409,8 @@
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="./assets/icons/email.svg"
@@ -418,7 +418,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="./assets/icons/linkedin.svg"
@@ -426,7 +426,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="./assets/icons/location.svg"
