--- a/portfolio/kindergarten.html
+++ b/portfolio/kindergarten.html
@@ -286,8 +286,8 @@
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/email.svg"
@@ -295,7 +295,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/linkedin.svg"
@@ -303,7 +303,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/location.svg"
