--- a/en/index.html
+++ b/en/index.html
@@ -86,7 +86,7 @@
             <div>
               <a
                 href="../index.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 sm:mr-4 uppercase"
               >
                 pl
               </a>
@@ -178,13 +178,13 @@
     </section>
 
     <!-- about -->
-    <section id="about" class="pt-6 md:pt-20">
+    <section id="about" class="pt-16 md:pt-20">
       <div
         class="md:flex-row flex flex-col-reverse md:items-end container m-auto md:px-20 lg:px-40"
       >
-        <div class="text-center md:text-left md:mr-14">
-          <h1 class="text-4xl font-semibold mb-6 md:mb-12">Zuzanna Kuszyk</h1>
-          <p>
+        <div class="px-10 text-center md:text-left md:mr-14">
+          <h1 class="text-4xl font-semibold mt-2 mb-6 md:mt-0 md:mb-12">Zuzanna Kuszyk</h1>
+          <p class="px-6 text-justify lg:px-0">
             I am an ambitious architecture student currently pursuing my
             master's degree at Poznan University of Technology. I completed my
             bachelor degree with the highest grade and received a rector's
@@ -414,8 +414,8 @@
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/email.svg"
@@ -423,7 +423,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/linkedin.svg"
@@ -431,7 +431,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/location.svg"
