--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -86,13 +86,13 @@
             <div>
               <a
                 href="../../portfolio/pool.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 sm:mr-4 uppercase"
               >
                 pl
               </a>
               <a
                 href=""
-                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline uppercase"
+                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline"
               >
                 en
               </a>
@@ -154,9 +154,9 @@
               design process and the final form of the building.
             </p>
           </div>
-          <div class="py-4">
+          <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Land development plan
             </h2>
@@ -168,7 +168,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Axonometric
             </h2>
@@ -178,15 +178,15 @@
               src="../../assets/pool/aksonometria.jpg"
             />
           </div>
-          <div class="py-4">
+          <div class="pb-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
               Floor plans
             </h2>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
               >
                 Level -1
               </h3>
@@ -194,7 +194,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
               >
                 Level 0
               </h3>
@@ -207,7 +207,7 @@
           
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Visualizations
             </h2>
@@ -228,14 +228,17 @@
             />
           </div>
         </div>
+        <p class="py-2">
+          tekst
+        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/email.svg"
@@ -243,7 +246,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/linkedin.svg"
@@ -251,7 +254,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/location.svg"
