--- a/en/portfolio/stable.html
+++ b/en/portfolio/stable.html
@@ -86,7 +86,7 @@
             <div>
               <a
                 href="../../portfolio/stable.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 sm:mr-4 uppercase"
               >
                 pl
               </a>
@@ -173,15 +173,15 @@
             <img src="../../assets/stable/PZT.jpg" />
           </div>
 
-          <div class="py-4">
+          <div class="pb-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
+              class="sticky top-14 bg-white z-20 pt-10 text-lg w-full text-center uppercase"
             >
               Floor plan
             </h2>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 text-base text-center w-full uppercase"
               >
                 Stable
               </h3>
@@ -189,7 +189,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 text-base text-center w-full uppercase"
               >
                 House
               </h3>
@@ -202,7 +202,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 text-lg text-center w-full uppercase"
             >
               Roof structure diagram
             </h2>
@@ -213,15 +213,15 @@
             />
           </div>
 
-          <div class="py-4">
+          <div class="pb-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
+              class="sticky top-14 bg-white z-20 pt-10 text-lg w-full text-center uppercase"
             >
               Section
             </h2>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 text-base text-center w-full uppercase"
               >
                 Stable
               </h3>
@@ -232,7 +232,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 text-base text-center w-full uppercase"
               >
                 House
               </h3>
@@ -245,7 +245,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
+              class="sticky mb-2 top-24 bg-white z-20 text-lg text-center w-full uppercase"
             >
               Visualisations
             </h2>
@@ -271,14 +271,17 @@
             />
           </div>
         </div>
+        <p class="py-2">
+          tekst
+        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/email.svg"
@@ -286,7 +289,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/linkedin.svg"
@@ -294,7 +297,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/location.svg"
