--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -66,28 +66,28 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                  href="../index.html#portfolio"
-                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                  >Portfolio</a
-                >
-                <a
-                  href="../index.html#about"
-                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                  aria-current="page"
-                  >About me</a
-                >
-                <a
-                  href="#contact"
-                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                  >Contact</a
-                >
+                    href="../index.html#portfolio"
+                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                    >Portfolio</a
+                  >
+                  <a
+                    href="../index.html#about"
+                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                    aria-current="page"
+                    >About me</a
+                  >
+                  <a
+                    href="#contact"
+                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                    >Contact</a
+                  >
                 </div>
               </div>
             </div>
             <div>
               <a
                 href="../../portfolio/urban.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 sm:mr-4 uppercase"
               >
                 pl
               </a>
@@ -129,7 +129,9 @@
 
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
-        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase">
+        <h1
+          class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-40"
+        >
           Reconstruction of the urban market in Pleszew
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
@@ -163,104 +165,104 @@
               gastronomic offerings.
             </p>
           </div>
-        </div>
-        <div class="py-4">
-          <h2
-            class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
-          >
-            Site analysis
-          </h2>
-          <div>
-            <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
+          <div class="py-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 text-lg w-full text-center uppercase"
             >
-              Landscape
-            </h3>
+              Site analysis
+            </h2>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 text-base text-center w-full uppercase"
+              >
+                Landscape
+              </h3>
+              <img
+                class="pt-1"
+                src="../../assets/urban/analiza zieleni.jpg"
+              />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Composition
+              </h3>
+              <img
+                class="pt-1"
+                src="../../assets/urban/analiza kompozycyjna.jpg"
+              />
+            </div>
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            >
+              Floor Plan
+            </h2>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Market square
+              </h3>
+              <img
+                class="pt-1"
+                src="../../assets/urban/rzut posadzki rynku .jpg"
+              />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Rainwater management diagram
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../../assets/urban/schemat zagospodarowania wody opadowej.jpg"
+              />
+            </div>
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Before/After
+            </h2>
             <img
               loading="lazy"
-              class="pt-1"
-              src="../../assets/urban/analiza zieleni.jpg"
+              class="pt-1 w-full text-center"
+              src="../../assets/urban/zdjęcie stanu istniejącego.jpg"
             />
-          </div>
-          <div>
-            <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
-            >
-              Composition
-            </h3>
             <img
               loading="lazy"
-              class="pt-1"
-              src="../../assets/urban/analiza kompozycyjna.jpg"
+              class="pt-1 w-full text-center"
+              src="../../assets/urban/wizualizacja rynku .jpg"
             />
-          </div>
-        </div>
-        <div class="py-4">
-          <h2
-            class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
-          >
-            Floor Plan
-          </h2>
-          <div>
-            <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
-            >
-              Market square
-            </h3>
-            <img
-              class="pt-1"
-              src="../../assets/urban/rzut posadzki rynku .jpg"
-            />
-          </div>
-          <div>
-            <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
-            >
-              Rainwater menagment diagram
-            </h3>
             <img
               loading="lazy"
-              class="pt-1"
-              src="../../assets/urban/schemat zagospodarowania wody opadowej.jpg"
+              class="pt-1 w-full text-center"
+              src="../../assets/urban/zdjęcie stanu istniejącego (2).jpg"
+            />
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/urban/wizualizacja rynku od strony ratusza.jpg"
             />
           </div>
         </div>
-        <div class="pb-4">
-          <h2
-            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
-          >
-            Before/After
-          </h2>
-          zdjęcie stanu istniejącego obok wizualizacja w kolorze
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/urban/zdjęcie stanu istniejącego.jpg"
-          />
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/urban/wizualizacja rynku .jpg"
-          />
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/urban/zdjęcie stanu istniejącego (2).jpg"
-          />
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/urban/wizualizacja rynku od strony ratusza.jpg"
-          />
-        </div>
+        <p class="py-2">
+          tekst
+        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="m-auto md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/email.svg"
@@ -268,7 +270,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/linkedin.svg"
@@ -276,7 +278,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/location.svg"
