--- a/portfolio/industrial.html
+++ b/portfolio/industrial.html
@@ -166,19 +166,18 @@
               komunikacji i współpracy między pracownikami.
             </p>
           </div>
-          <div class="pb-4">
+          <div class="pt-4">
             <h2
               class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Projekt zagospodarowania terenu
             </h2>
             <img
-              loading="lazy"
               class="pt-1 w-full text-center"
               src="../assets/industrial/PZT.jpg"
             />
           </div>
-          <div class="py-4">
+          <div class="pb-4">
             <h2
               class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
@@ -191,11 +190,7 @@
               >
                 Poziom 0
               </h3>
-              <img
-                loading="lazy"
-                class="pt-1"
-                src="../assets/industrial/rzut poziom 0.jpg"
-              />
+              <img class="pt-1" src="../assets/industrial/rzut poziom 0.jpg" />
             </div>
             <div>
               <h3
@@ -221,6 +216,494 @@
                 src="../assets/industrial/Rzut dachu.jpg"
               />
             </div>
+            <table class="w-full text-center hidden sm:table">
+              <div class="bg-white z-10 sticky top-28 py-2"></div>
+              <thead class="bg-white z-10 sticky top-32" style="box-shadow: 0px 1px black;">
+                <tr>
+                  <th>
+                    <span>Kondygnacja</span>
+                  </th>
+                  <th>
+                    <span>Nazwa pomieszczenia</span>
+                  </th>
+                  <th>
+                    <span>Nr.</span>
+                  </th>
+                  <th>
+                    <span>Powierzchnia [m²]</span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td rowspan="26">
+                    <span class="sticky top-40">Poziom 0</span>
+                  </td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Hala prod.</span>
+                  </td>
+                  <td>
+                    <span>0.15</span>
+                  </td>
+                  <td>
+                    <span>1000,9</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Klatka schodowa</span>
+                  </td>
+                  <td>
+                    <span>0.1</span>
+                  </td>
+                  <td>
+                    <span>39,6</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Komunikacja pozioma</span>
+                  </td>
+                  <td>
+                    <span>0.4</span>
+                  </td>
+                  <td>
+                    <span>76,1</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Kotłownia</span>
+                  </td>
+                  <td>
+                    <span>0.2</span>
+                  </td>
+                  <td>
+                    <span>7,7</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Natryski</span>
+                  </td>
+                  <td>
+                    <span>0.12</span>
+                  </td>
+                  <td>
+                    <span>10,2</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Natryski</span>
+                  </td>
+                  <td>
+                    <span>0.13</span>
+                  </td>
+                  <td>
+                    <span>9,3</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Natryski</span>
+                  </td>
+                  <td>
+                    <span>0,7</span>
+                  </td>
+                  <td>
+                    <span>7,7</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Pom. biurowe</span>
+                  </td>
+                  <td>
+                    <span>0,16</span>
+                  </td>
+                  <td>
+                    <span>14,6</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Przedsionek</span>
+                  </td>
+                  <td>
+                    <span>0.11</span>
+                  </td>
+                  <td>
+                    <span>4,5</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Przedsionek</span>
+                  </td>
+                  <td>
+                    <span>0.18</span>
+                  </td>
+                  <td>
+                    <span>7,7</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Przedsionek</span>
+                  </td>
+                  <td>
+                    <span>0.19</span>
+                  </td>
+                  <td>
+                    <span>8,1</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Przedsionek</span>
+                  </td>
+                  <td>
+                    <span>0,22</span>
+                  </td>
+                  <td>
+                    <span>7,0</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Przedsionek</span>
+                  </td>
+                  <td>
+                    <span>0.8</span>
+                  </td>
+                  <td>
+                    <span>4,8</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Stołówka</span>
+                  </td>
+                  <td>
+                    <span>0.3</span>
+                  </td>
+                  <td>
+                    <span>101,0</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Szatnia damska brudna</span>
+                  </td>
+                  <td>
+                    <span>0.6</span>
+                  </td>
+                  <td>
+                    <span>0,3</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Szatnia damska brudna</span>
+                  </td>
+                  <td>
+                    <span>0.6</span>
+                  </td>
+                  <td>
+                    <span>30,3</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Szatnia damska czysta</span>
+                  </td>
+                  <td>
+                    <span>0.14</span>
+                  </td>
+                  <td>
+                    <span>35,9</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Szatnia meska brudna</span>
+                  </td>
+                  <td>
+                    <span>0.5</span>
+                  </td>
+                  <td>
+                    <span>65,4</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Szatnia meska czysta</span>
+                  </td>
+                  <td>
+                    <span>0.13</span>
+                  </td>
+                  <td>
+                    <span>64,5</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>0,10</span>
+                  </td>
+                  <td>
+                    <span>9,1</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>0,17</span>
+                  </td>
+                  <td>
+                    <span>14,2</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>0,20</span>
+                  </td>
+                  <td>
+                    <span>12,9</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>0.21</span>
+                  </td>
+                  <td>
+                    <span>13,4</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>0.9</span>
+                  </td>
+                  <td class="border-b border-black">
+                    <span >9,0</span>
+                  </td>
+                </tr>
+                <tr class="border-b border-black">
+                  <td></td>
+                  <td></td>
+                  <td>
+                    <span>1554,2</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td rowspan="17">
+                    <span class="sticky top-40">Poziom +1</span>
+                  </td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Archiwum</span>
+                  </td>
+                  <td>
+                    <span>1.3</span>
+                  </td>
+                  <td>
+                    <span>8,8</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Klatka schodowa</span>
+                  </td>
+                  <td>
+                    <span>1.1</span>
+                  </td>
+                  <td>
+                    <span>39,4</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Komunikacja pozioma</span>
+                  </td>
+                  <td>
+                    <span>1.11</span>
+                  </td>
+                  <td>
+                    <span>79,9</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Pom. pracy biurowej</span>
+                  </td>
+                  <td>
+                    <span>1.12</span>
+                  </td>
+                  <td>
+                    <span>106,5</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Pom. pracy biurowej</span>
+                  </td>
+                  <td>
+                    <span>1.6</span>
+                  </td>
+                  <td>
+                    <span>44,0</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Pom. pracy biurowej</span>
+                  </td>
+                  <td>
+                    <span>1.7</span>
+                  </td>
+                  <td>
+                    <span>96,7</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Pom. socjalne</span>
+                  </td>
+                  <td>
+                    <span>1.7</span>
+                  </td>
+                  <td>
+                    <span>14,0</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Przedsionek</span>
+                  </td>
+                  <td>
+                    <span>1.9</span>
+                  </td>
+                  <td>
+                    <span>3,1</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Sala konferencyjna</span>
+                  </td>
+                  <td>
+                    <span>1.4</span>
+                  </td>
+                  <td>
+                    <span>23,2</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Sala konferencyjna</span>
+                  </td>
+                  <td>
+                    <span>1.5</span>
+                  </td>
+                  <td>
+                    <span>15,3</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>Serwerownia</span>
+                  </td>
+                  <td>
+                    <span>1.2</span>
+                  </td>
+                  <td>
+                    <span>7,0</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>1.8</span>
+                  </td>
+                  <td>
+                    <span>6,4</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC</span>
+                  </td>
+                  <td>
+                    <span>1.10</span>
+                  </td>
+                  <td>
+                    <span>6,9</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC dla niepełnosprawnych</span>
+                  </td>
+                  <td>
+                    <span>1.9</span>
+                  </td>
+                  <td>
+                    <span>3,1</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span>WC dla niepełnosprawnych</span>
+                  </td>
+                  <td>
+                    <span>1.9</span>
+                  </td>
+                  <td class="border-b border-black">
+                    <span>4,9</span>
+                  </td>
+                </tr>
+                <tr class="border-b border-black">
+                  <td></td>
+                  <td></td>
+                  <td>
+                    <span>459,2</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>
+                    <span class="font-semibold">2015,4</span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <div class="pb-4">
             <h2
@@ -245,9 +728,7 @@
             >
               Detal
             </h2>
-            <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
-            >
+            <h3 class="top-28 bg-white z-10 mb-2 text-base text-center w-full">
               Łączenie dachu ze ścianą/ mocowanie płyty warstwowej do słupa/
               montaż drzwi w płycie warstwowej
             </h3>
@@ -266,12 +747,12 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/industrial/wizualizacja hali przemysłowej.jpg a-a.jpg"
+              src="../assets/industrial/wizualizacja hali przemysłowej.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg b-b.jpg"
+              src="../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg"
             />
             <img
               loading="lazy"
@@ -280,14 +761,18 @@
             />
           </div>
         </div>
+        <p class="py-2">
+          tekst
+        </p>
       </div>
     </section>
+
     <div class="container border-t border-black md:mt-8 m-auto">
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/email.svg"
@@ -295,7 +780,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/linkedin.svg"
@@ -303,7 +788,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/location.svg"
