--- a/portfolio/stable.html
+++ b/portfolio/stable.html
@@ -173,7 +173,7 @@
             <img src="../assets/stable/PZT.jpg" />
           </div>
 
-          <div class="py-4">
+          <div class="pb-4">
             <h2
               class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
@@ -213,7 +213,7 @@
             />
           </div>
 
-          <div class="py-4">
+          <div class="pb-4">
             <h2
               class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
@@ -261,24 +261,27 @@
               <img
                 loading="lazy"
                 class="pt-1 w-full text-center"
-                src="../assets/stable/render domu od frontu.jpg stajni.jpg"
+                src="../assets/stable/render domu od frontu.jpg"
               />
               <img
                 loading="lazy"
                 class="pt-1 w-full text-center"
-                src="../assets/stable/render domu od strony ogrodu.jpg stajni.jpg"
+                src="../assets/stable/render domu od strony ogrodu.jpg"
               />
             </div>
           </div>
         </div>
+        <p class="py-2">
+          tekst
+        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
-          <div class="text-center md:text-left">
-            <div class="mb-2 flex gap-3 items-center">
+          <div class="px-10 text-center md:text-left">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/email.svg"
@@ -286,7 +289,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3">
+            <div class="mb-2 flex gap-3 text-left">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/linkedin.svg"
@@ -294,7 +297,7 @@
               />
               <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3 text-left items-center">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/location.svg"
