--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -92,7 +92,7 @@
               </a>
               <a
                 href=""
-                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline"
+                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline uppercase"
               >
                 en
               </a>
@@ -154,7 +154,7 @@
               design process and the final form of the building.
             </p>
           </div>
-          <div class="pb-4">
+          <div class="py-4">
             <h2
               class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
@@ -228,9 +228,10 @@
             />
           </div>
         </div>
-        <p class="py-2">
-          tekst
-        </p>
+
+          <p class="py-2">
+            tekst
+          </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
