--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -230,31 +230,39 @@
             >
               Before/After
             </h2>
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../../assets/urban/zdjęcie stanu istniejącego.jpg"
-            />
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../../assets/urban/wizualizacja rynku .jpg"
-            />
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../../assets/urban/zdjęcie stanu istniejącego (2).jpg"
-            />
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../../assets/urban/wizualizacja rynku od strony ratusza.jpg"
-            />
+            <div class="w-full flex flex-col lg:flex-row gap-1 pb-1">
+              <img
+                loading="lazy"
+                class="grayscale lg:w-1/2"
+                src="../../assets/urban/zdjęcie stanu istniejącego.jpg"
+                alt="zdjęcie stanu istniejącego"
+              />
+              <img
+                loading="lazy"
+                class="lg:w-1/2"
+                src="../../assets/urban/wizualizacja rynku .jpg"
+                alt="wizualizacja rynku"
+              />
+            </div>
+            <div class="flex flex-col lg:flex-row gap-1">
+              <img
+                loading="lazy"
+                class="grayscale lg:w-1/2"
+                src="../../assets/urban/zdjęcie stanu istniejącego (2).jpg"
+                alt="zdjęcie stanu istniejącego 2"
+              />
+              <img
+                loading="lazy"
+                class="lg:w-1/2"
+                src="../../assets/urban/wizualizacja rynku od strony ratusza.jpg"
+                alt="wizualizacja rynku od strony ratusza"
+              />
+            </div>
           </div>
+          <p class="py-2">
+            tekst
+          </p>
         </div>
-        <p class="py-2">
-          tekst
-        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
