--- a/portfolio/kindergarten.html
+++ b/portfolio/kindergarten.html
@@ -170,7 +170,7 @@
           </div>
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Aksonometria
             </h2>
