--- a/portfolio/kraszewskiego.html
+++ b/portfolio/kraszewskiego.html
@@ -170,7 +170,7 @@
           </div>
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Aksonometria
             </h2>
@@ -278,10 +278,10 @@
               src="../assets/kraszewskiego/model2.jpg"
             />
           </div>
+          <p class="py-2">
+            tekst
+          </p>
         </div>
-        <p class="py-2">
-          tekst
-        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
