--- a/portfolio/urban.html
+++ b/portfolio/urban.html
@@ -231,7 +231,7 @@
             <h2
               class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
-              Wizualizacje
+              Przed/Po
             </h2>
             <div class="w-full flex flex-col lg:flex-row gap-1 pb-1">
               <img
@@ -262,10 +262,10 @@
               />
             </div>
           </div>
+          <p class="py-2">
+            tekst
+          </p>
         </div>
-        <p class="py-2">
-          tekst
-        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
