--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -65,21 +65,21 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                  href="../index.html#portfolio"
-                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                  >Portfolio</a
-                >
-                <a
-                  href="../index.html#about"
-                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                  aria-current="page"
-                  >About me</a
-                >
-                <a
-                  href="#contact"
-                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                  >Contact</a
-                >
+                    href="../index.html#portfolio"
+                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                    >Portfolio</a
+                  >
+                  <a
+                    href="../index.html#about"
+                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                    aria-current="page"
+                    >About me</a
+                  >
+                  <a
+                    href="#contact"
+                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                    >Contact</a
+                  >
                 </div>
               </div>
             </div>
@@ -128,7 +128,9 @@
 
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
-        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-40">
+        <h1
+          class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-40"
+        >
           Project of an industrial hall
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
@@ -162,61 +164,95 @@
               also fosters seamless communication and collaboration among
               employees.
             </p>
-          </div>
-
-          <div class="py-4">
-            <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
-            >
-              Land development plan
-            </h2>
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../../assets/industrial/PZT.jpg"
-            />
-          </div>
-          <div class="pb-4">
-            <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
-            >
-              Floor plan
-            </h2>
-            dodać zestawienie powierzchni przyklejone do końca rzutów
-            <div>
+            <div class="py-4">
+              <h2
+                class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              >
+                Land development plan
+              </h2>
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../../assets/industrial/PZT.jpg"
+              />
+            </div>
+            <div class="pb-4">
+              <h2
+                class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+              >
+                Floor plan
+              </h2>
+              dodać zestawienie powierzchni przyklejone do końca rzutów
+              <div>
+                <h3
+                  class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                >
+                  Level 0
+                </h3>
+                <img
+                  loading="lazy"
+                  class="pt-1"
+                  src="../../assets/industrial/rzut poziom 0.jpg"
+                />
+              </div>
+              <div>
+                <h3
+                  class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                >
+                  Level +1
+                </h3>
+                <img
+                  loading="lazy"
+                  class="pt-1"
+                  src="../../assets/industrial/rzut poziom +1.jpg"
+                />
+              </div>
+              <div>
+                <h3
+                  class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                >
+                  Level +2
+                </h3>
+                <img
+                  loading="lazy"
+                  class="pt-1"
+                  src="../../assets/industrial/Rzut dachu.jpg"
+                />
+              </div>
+            </div>
+            <div class="pb-4">
+              <h2
+                class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              >
+                Sections
+              </h2>
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../../assets/industrial/przekrój a-a.jpg"
+              />
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../../assets/industrial/przekrój b-b.jpg"
+              />
+            </div>
+            <div class="pb-4">
+              <h2
+                class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              >
+                Details
+              </h2>
               <h3
                 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
               >
-                Level 0
+                Connecting the roof with the wall / attaching the sandwich panel
+                to the column / installing doors in the sandwich panel
               </h3>
               <img
                 loading="lazy"
-                class="pt-1"
-                src="../../assets/industrial/rzut poziom 0.jpg"
-              />
-            </div>
-            <div>
-              <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
-              >
-                Level +1
-              </h3>
-              <img
-                loading="lazy"
-                class="pt-1"
-                src="../../assets/industrial/rzut poziom +1.jpg"
-              />
-            </div>
-            <div>
-              <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
-              >
-                Level +2
-              </h3>
-              <img
-                loading="lazy"
-                class="pt-1"
-                src="../../assets/industrial/Rzut dachu.jpg"
+                class="pt-1 w-full text-center"
+                src="../../assets/industrial/Detal łączenie dachu ze ścianą, mocowanie płyty warstwowej do słupa, montaż drzwi w płycie warstwowej.jpg"
               />
             </div>
           </div>
@@ -224,62 +260,26 @@
             <h2
               class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
-              Sections
+              Visualisations
             </h2>
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../../assets/industrial/przekrój a-a.jpg"
+              src="../../assets/industrial/wizualizacja hali przemysłowej.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../../assets/industrial/przekrój b-b.jpg"
+              src="../../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg"
             />
-          </div>
-          <div class="pb-4">
-            <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
-            >
-              Details
-            </h2>
-            <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
-            >
-            Connecting the roof with the wall / attaching the sandwich panel to the column / installing doors in the sandwich panel
-            </h3>
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../../assets/industrial/Detal łączenie dachu ze ścianą, mocowanie płyty warstwowej do słupa, montaż drzwi w płycie warstwowej.jpg"
+              src="../../assets/industrial/projekt wnętrza stołówki.jpg"
             />
           </div>
+          <p class="py-2">tekst</p>
         </div>
-        <div class="pb-4">
-          <h2
-            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
-          >
-            Visualisations
-          </h2>
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/industrial/wizualizacja hali przemysłowej.jpg"
-          />
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg"
-          />
-          <img
-            loading="lazy"
-            class="pt-1 w-full text-center"
-            src="../../assets/industrial/projekt wnętrza stołówki.jpg"
-          />
-        </div>
-        <p class="py-2">
-          tekst
-        </p>
       </div>
     </section>
 
