--- a/en/portfolio/stable.html
+++ b/en/portfolio/stable.html
@@ -166,7 +166,7 @@
           </div>
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
               Land development plan
             </h2>
@@ -270,10 +270,10 @@
               src="../../assets/stable/render domu od strony ogrodu.jpg"
             />
           </div>
+          <p class="py-2">
+            tekst
+          </p>
         </div>
-        <p class="py-2">
-          tekst
-        </p>
       </div>
     </section>
     <div class="container border-t border-black md:mt-8 m-auto">
