--- a/index.html
+++ b/index.html
@@ -180,9 +180,13 @@
 
     <!-- about -->
     <section id="about" class="pt-16 md:pt-20">
-      <div class="lg:flex-row flex flex-col-reverse lg:items-end container m-auto lg:px-20 xl:px-36">
+      <div
+        class="lg:flex-row flex flex-col-reverse lg:items-end container m-auto lg:px-20 xl:px-36"
+      >
         <div class="text-center lg:text-left lg:mr-14">
-          <h1 class="text-4xl font-semibold mt-2 mb-6 md:mt-0 md:mb-12">Zuzanna Kuszyk</h1>
+          <h1 class="text-4xl font-semibold mt-2 mb-6 md:mt-0 md:mb-12">
+            Zuzanna Kuszyk
+          </h1>
           <p class="px-6 text-justify lg:px-0">
             Jestem ambitną studentką architektury w trakcie studiów
             magisterskich na Politechnice Poznańskiej. Ukończyłam studia
@@ -312,63 +316,44 @@
                   <li
                     class="flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6"
                   >
-                    <div class="flex w-0 flex-1 items-center">
-                      <svg
-                        class="h-5 w-5 flex-shrink-0 text-gray-400"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                        aria-hidden="true"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
-                          clip-rule="evenodd"
-                        />
-                      </svg>
-                      <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                        <span class="truncate font-medium">CV.pdf</span>
+                    <a
+                    href="./assets/CV.pdf"
+                    download="Zuzanna-Kuszyk-cv.pdf"
+                      class="w-full flex"
+                    >
+                      <div class="flex w-0 flex-1 items-center">
+                        <svg
+                          class="h-5 w-5 flex-shrink-0 text-gray-400"
+                          viewBox="0 0 20 20"
+                          fill="currentColor"
+                          aria-hidden="true"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
+                            clip-rule="evenodd"
+                          />
+                        </svg>
+                        <div class="ml-4 flex min-w-0 flex-1 gap-2">
+                          <span class="truncate font-medium">CV.pdf</span>
+                        </div>
                       </div>
-                    </div>
-                    <div class="ml-4 flex-shrink-0">
-                      <a
-                        href="#"
-                        class="font-medium text-gray-600 hover:text-gray-500"
-                        >Pobierz</a
-                      >
-                    </div>
+                      <div class="ml-4 flex-shrink-0">
+                        <span
+                          class="font-medium text-gray-600 hover:text-gray-500"
+                          >Pobierz</span
+                        >
+                      </div>
+                    </a>
                   </li>
                   <li
                     class="flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6"
                   >
-                    <div class="flex w-0 flex-1 items-center">
-                      <svg
-                        class="h-5 w-5 flex-shrink-0 text-gray-400"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                        aria-hidden="true"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
-                          clip-rule="evenodd"
-                        />
-                      </svg>
-                      <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                        <span class="truncate font-medium">Portfolio.pdf</span>
-                      </div>
-                    </div>
-                    <div class="ml-4 flex-shrink-0">
-                      <a
-                        href="#"
-                        class="font-medium text-gray-600 hover:text-gray-500"
-                        >Pobierz</a
-                      >
-                    </div>
-                  </li>
-                  <li
-                    class="flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6"
-                  >
-                    <a href="#" class="w-full flex">
+                    <a
+                      href="./assets/Portfolio.pdf"
+                      download="Zuzanna-Kuszyk-portfolio.pdf"
+                      class="w-full flex"
+                    >
                       <div class="flex w-0 flex-1 items-center">
                         <svg
                           class="h-5 w-5 flex-shrink-0 text-gray-400"
@@ -384,13 +369,47 @@
                         </svg>
                         <div class="ml-4 flex min-w-0 flex-1 gap-2">
                           <span class="truncate font-medium"
-                            >Cover letter.pdf</span
+                            >Portfolio.pdf</span
                           >
                         </div>
                       </div>
                       <div class="ml-4 flex-shrink-0">
                         <span
-                          href="#"
+                          class="font-medium text-gray-600 hover:text-gray-500"
+                          >Pobierz</span
+                        >
+                      </div>
+                    </a>
+                  </li>
+                  <li
+                    class="flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6"
+                  >
+                    <a
+                      href="./assets/list motywacyjny.pdf"
+                      download="Zuzanna-Kuszyk-list-motywacyjny.pdf"
+                      class="w-full flex"
+                    >
+                      <div class="flex w-0 flex-1 items-center">
+                        <svg
+                          class="h-5 w-5 flex-shrink-0 text-gray-400"
+                          viewBox="0 0 20 20"
+                          fill="currentColor"
+                          aria-hidden="true"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
+                            clip-rule="evenodd"
+                          />
+                        </svg>
+                        <div class="ml-4 flex min-w-0 flex-1 gap-2">
+                          <span class="truncate font-medium"
+                            >List motywacyjny.pdf</span
+                          >
+                        </div>
+                      </div>
+                      <div class="ml-4 flex-shrink-0">
+                        <span
                           class="font-medium text-gray-600 hover:text-gray-500"
                           >Pobierz</span
                         >
