tekst na dole, zmiana cv

--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -182,7 +182,7 @@
               >
                 Floor plan
               </h2>
-              dodać zestawienie powierzchni przyklejone do końca rzutów
+              
               <div>
                 <h3
                   class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
@@ -278,7 +278,7 @@
               src="../../assets/industrial/projekt wnętrza stołówki.jpg"
             />
           </div>
-          <p class="py-2">tekst</p>
+          <p class="py-2">2023| author  Zuzanna Kuszyk Eng. of Architecture| supervisor Marcin Giedrowicz PhD, Eng. of Architecture </p>
         </div>
       </div>
     </section>
