--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -282,7 +282,7 @@
             />
           </div>
           <p class="py-2">
-            tekst
+            2023| author  Zuzanna Kuszyk Eng. of Architecture| thesis supervisor Magda Matuszewska PhD, Eng. of Architecture
           </p>
         </div>
       </div>
