--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -230,7 +230,7 @@
         </div>
 
           <p class="py-2">
-            tekst
+            2022| authors: Julia Kurowska, Zuzanna Kuszyk, Marta Lipińska| supervisor Wanda Mytych  M.Sc.Eng. of Architecture
           </p>
       </div>
     </section>
