--- a/en/portfolio/stable.html
+++ b/en/portfolio/stable.html
@@ -271,7 +271,7 @@
             />
           </div>
           <p class="py-2">
-            tekst
+            2022| authors  Zuzanna Kuszyk, Marta Lipińska| supervisor Joanna Kołata PhD, Eng. of Architecture
           </p>
         </div>
       </div>
