--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -260,7 +260,7 @@
             </div>
           </div>
           <p class="py-2">
-            tekst
+            2023| authors  Julia Kurowska, Zuzanna Kuszyk,Marta Lipińska| supervisor Bartosz Kazimierczak PhD, Eng. of Architecture
           </p>
         </div>
       </div>
