--- a/portfolio/industrial.html
+++ b/portfolio/industrial.html
@@ -183,7 +183,7 @@
             >
               Rzuty
             </h2>
-            dodać zestawienie powierzchni przyklejone do końca rzutów
+            
             <div>
               <h3
                 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
@@ -762,7 +762,7 @@
           </div>
         </div>
         <p class="py-2">
-          tekst
+          2023| autorka inż. arch. Zuzanna Kuszyk| prowadzący dr inż. arch. Marcin Giedrowicz
         </p>
       </div>
     </section>
