--- a/portfolio/kraszewskiego.html
+++ b/portfolio/kraszewskiego.html
@@ -279,7 +279,7 @@
             />
           </div>
           <p class="py-2">
-            tekst
+            2023| autorka inż. arch. Zuzanna Kuszyk| promotor dr inż. arch. Magda Matuszewska
           </p>
         </div>
       </div>
