--- a/portfolio/pool.html
+++ b/portfolio/pool.html
@@ -239,7 +239,7 @@
             />
           </div>
           <p class="py-2">
-            tekst
+            2022| autorki  Julia Kurowska, Zuzanna Kuszyk, Marta Lipińska| prowadząca mgr inż. arch. Wanda Mytych
           </p>
         </div>
       </div>
