--- a/portfolio/stable.html
+++ b/portfolio/stable.html
@@ -271,7 +271,7 @@
             </div>
           </div>
           <p class="py-2">
-            tekst
+            2022| autorki Zuzanna Kuszyk, Marta Lipińska| prowadząca dr inż. arch. Joanna Kołata
           </p>
         </div>
       </div>
