--- a/portfolio/urban.html
+++ b/portfolio/urban.html
@@ -263,7 +263,7 @@
             </div>
           </div>
           <p class="py-2">
-            tekst
+            2023| autorki Julia Kurowska, Zuzanna Kuszyk, Marta Lipińska| prowadzący dr inż. arch. Bartosz Kazimierczak
           </p>
         </div>
       </div>
