--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -179,7 +179,7 @@
               </h3>
               <img
                 class="pt-1"
-                src="../../assets/urban/analiza zieleni.jpg"
+                src="../../assets/urban/ANALIZA ZIELENI.jpg"
               />
             </div>
             <div>
