--- a/portfolio/urban.html
+++ b/portfolio/urban.html
@@ -178,7 +178,7 @@
               </h3>
               <img
                 class="pt-1"
-                src="../assets/urban/analiza zieleni.jpg"
+                src="../assets/urban/ANALIZA ZIELENI.jpg"
                 alt="analiza zieleni"
               />
             </div>
