--- a/en/index.html
+++ b/en/index.html
@@ -10,6 +10,14 @@
     <link href="../styles.css" rel="stylesheet" />
   </head>
   <body class="scroll-smooth">
+    <a href="#nav" class="fixed right-5 bottom-7 arrow-small-screen bg-white p-1 outline outline-black z-50 outline-1">
+      <img
+      class="h-4 w-4"
+      src="../assets/icons/arrow.svg"
+      alt="arrow"
+      class="up-arrow"
+    />
+    </a>
     <section id="nav" class="pb-16">
       <!-- navbar -->
       <nav class="bg-white fixed w-screen z-50">
@@ -57,6 +65,14 @@
                 </svg>
               </button>
             </div>
+            <a href="#nav" class="hidden absolute lg:-right-10 arrow-large-screen">
+              <img
+              class="h-5 w-5"
+              src="../assets/icons/arrow.svg"
+              alt="arrow"
+              class="up-arrow"
+            />
+            </a>
             <div
               class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
               id="menu"
