--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 </svg>
               </button>
             </div>
+            <a href="#nav" class="hidden absolute lg:-right-10 arrow-large-screen">
+              <img
+              class="h-5 w-5"
+              src="../assets/icons/arrow.svg"
+              alt="arrow"
+              class="up-arrow"
+            />
+            </a>
             <div
               class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
               id="menu"
